[gd_scene load_steps=8 format=2]

[ext_resource path="res://dialogue/dialogue_box.png" type="Texture" id=1]
[ext_resource path="res://dialogue/pointer.png" type="Texture" id=2]
[ext_resource path="res://dialogue/dialogue_box.gd" type="Script" id=3]
[ext_resource path="res://fonts/gameBoy6.tres" type="DynamicFont" id=4]
[ext_resource path="res://dialogue/icons/test_icon1.png" type="Texture" id=5]
[ext_resource path="res://dialogue/dialogue_button_selected.png" type="Texture" id=6]

[sub_resource type="Animation" id=1]
resource_name = "pointer_point"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("pointer:position")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 238, 136 ), Vector2( 246, 136 ), Vector2( 238, 136 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("pointer:scale")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.25, 1.25 ), Vector2( 1, 1 ) ]
}

[node name="dialogue_box" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="box_visual" type="NinePatchRect" parent="."]
margin_top = 84.0
margin_right = 256.0
margin_bottom = 144.0
texture = ExtResource( 1 )
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 6
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="icon" type="Sprite" parent="box_visual"]
position = Vector2( 30, 30 )
texture = ExtResource( 5 )

[node name="RichTextLabel" type="RichTextLabel" parent="box_visual"]
margin_left = 60.0
margin_top = 6.0
margin_right = 250.0
margin_bottom = 46.0
custom_fonts/normal_font = ExtResource( 4 )
bbcode_enabled = true
bbcode_text = "Test Text"
text = "Test Text"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pointer" type="Sprite" parent="."]
position = Vector2( 238, 136 )
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/pointer_point = SubResource( 1 )

[node name="options" type="HBoxContainer" parent="."]
margin_left = 4.0
margin_top = 70.0
margin_right = 252.0
margin_bottom = 80.0
rect_min_size = Vector2( 248, 10 )
alignment = 1
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="option0" type="TextureButton" parent="options"]
margin_right = 80.0
margin_bottom = 10.0
size_flags_horizontal = 3
texture_normal = ExtResource( 1 )
texture_hover = ExtResource( 6 )
texture_focused = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="button_text" type="RichTextLabel" parent="options/option0"]
margin_left = 11.0
margin_right = 77.0
margin_bottom = 10.0
custom_fonts/normal_font = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="option1" type="TextureButton" parent="options"]
margin_left = 84.0
margin_right = 164.0
margin_bottom = 10.0
size_flags_horizontal = 3
texture_normal = ExtResource( 1 )
texture_hover = ExtResource( 6 )
texture_focused = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="button_text" type="RichTextLabel" parent="options/option1"]
margin_left = 11.0
margin_right = 77.0
margin_bottom = 10.0
custom_fonts/normal_font = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="option2" type="TextureButton" parent="options"]
margin_left = 168.0
margin_right = 248.0
margin_bottom = 10.0
size_flags_horizontal = 3
texture_normal = ExtResource( 1 )
texture_hover = ExtResource( 6 )
texture_focused = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="button_text" type="RichTextLabel" parent="options/option2"]
margin_left = 11.0
margin_right = 77.0
margin_bottom = 10.0
custom_fonts/normal_font = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="typeTimer" type="Timer" parent="."]
[connection signal="pressed" from="options/option0" to="." method="_on_option_button_pressed" binds= [ 0 ]]
[connection signal="pressed" from="options/option1" to="." method="_on_option_button_pressed" binds= [ 1 ]]
[connection signal="pressed" from="options/option2" to="." method="_on_option_button_pressed" binds= [ 2 ]]
[connection signal="timeout" from="typeTimer" to="." method="_on_typeTimer_timeout"]
